--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -11,8 +11,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.10</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jbehave</groupId>
+      <artifactId>jbehave-core</artifactId>
+      <version>3.9.5</version>
+    </dependency>
+    <dependency>
+      <groupId>de.codecentric</groupId>
+      <artifactId>jbehave-junit-runner</artifactId>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
